fixed question 1 invisibility due to navbar by adding padding to body

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,36 +1,38 @@
 * {
-	padding: 15px;
-	text-align: center;
+    padding: 15px;
+    text-align: center;
 }
 
-.nav {
+body {
+    padding: 80px;
 }
+
+.nav {}
 
 #timer-box {
-	background-color: yellow;
-	height: 50px;
+    background-color: yellow;
+    height: 50px;
 }
 
 .row {
-	border: 1px black solid;
+    border: 1px black solid;
 }
 
 .radio-inline:hover {
-	background-color: yellow;
-	transition: background-color .5s;
-	font-size: 20px;
-	transition: font-size .5s;
+    background-color: yellow;
+    transition: background-color .5s;
+    font-size: 20px;
+    transition: font-size .5s;
 }
 
 #submit-button:hover {
-	background-color: yellow;
-	font-size: 20px;
+    background-color: yellow;
+    font-size: 20px;
 }
 
 #start-button:hover {
-	background-color: yellow;
-	transition: background-color .5s;	
-	font-size: 20px;
-	transition: font-size .5s;
-	
+    background-color: yellow;
+    transition: background-color .5s;
+    font-size: 20px;
+    transition: font-size .5s;
 }
